# airflow-provider-google-sheets

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  pyproject.toml  readme.md  readme_ru.md
.github/workflows/: publish.yml
airflow_google_sheets/: __init__.py  exceptions.py
airflow_google_sheets/hooks/: google_sheets.py
airflow_google_sheets/operators/: manage.py  read.py  write.py
airflow_google_sheets/utils/: data_formats.py  retry.py  schema.py
airflow_provider_google_sheets/: __init__.py
airflow_provider_google_sheets/hooks/: google_sheets.py
airflow_provider_google_sheets/operators/: manage.py  read.py  write.py
airflow_provider_google_sheets/utils/: data_formats.py  headers.py  row_filter.py  schema.py
docs/plans/: 20260325-write-column-mapping.md
examples/: example_bigquery_to_sheets.py  example_bq_query_to_sheets.py  example_manage.py  example_read.py  example_sheets_to_bigquery.py  example_smart_merge.py  example_write.py
tests/test_hooks/: test_google_sheets.py
tests/test_operators/: test_manage.py  test_read.py  test_write.py
tests/test_utils/: test_data_formats.py  test_headers.py  test_retry.py  test_row_filter.py  test_schema.py
