[build-system]
requires = ["setuptools>=68.0", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "airflow-provider-google-sheets"
dynamic = ["version"]
description = "Apache Airflow provider for Google Sheets — read, write, and smart merge"
readme = "readme.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Michael Kozhin", email = "michael@kozhin.cc"},
]
keywords = ["airflow", "google-sheets", "provider", "etl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Apache Airflow",
    "Framework :: Apache Airflow :: Provider",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = [
    "apache-airflow>=2.7,<3.0",
    "google-api-python-client>=2.0",
    "google-auth>=2.0",
]

[project.optional-dependencies]
transliterate = ["transliterate"]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[project.urls]
Homepage = "https://github.com/mkozhin/airflow-provider-google-sheets"
Documentation = "https://github.com/mkozhin/airflow-provider-google-sheetи добавьs#readme"
Repository = "https://github.com/mkozhin/airflow-provider-google-sheets"
Changelog = "https://github.com/mkozhin/airflow-provider-google-sheets/blob/main/CHANGELOG.md"
Issues = "https://github.com/mkozhin/airflow-provider-google-sheets/issues"

[project.entry-points."apache_airflow_provider"]
provider_info = "airflow_provider_google_sheets:get_provider_info"

[tool.setuptools.packages.find]
include = ["airflow_provider_google_sheets*"]

[tool.setuptools_scm]
version_file = "airflow_provider_google_sheets/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
